Fix Plus Server suggestion long text overflows
Closes #3133

--- a/app/features/plus-suggestions/plus.module.css
+++ b/app/features/plus-suggestions/plus.module.css
@@ -51,6 +51,8 @@
 
 .comment {
 	white-space: pre-wrap;
+	overflow-wrap: break-word;
+	min-width: 0;
 }
 
 .commentButton {
